##
# Python Project file for APPCLI.
# _____________________________________________________________________________
#
# Created by brightSPARK Labs
# www.brightsparklabs.com
##

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "env"
variable = "APP_VERSION"

[tool.hatch.build.targets.wheel]
packages = ["appcli"]

[project.urls]
Homepage = "https://www.brightsparklabs.com"
Repository = "https://github.com/brightsparklabs/appcli"
Changelog = "https://github.com/brightsparklabs/appcli/blob/master/CHANGELOG.md"

[project]
name = "bsl-appcli"
dynamic = ["version"]
requires-python = ">= 3.12.3"
description = "A library for adding CLI interfaces to applications in the brightSPARK Labs style."
readme = { file = "README.adoc", content-type = "text/plain" }
license = {text = "MIT License"}
authors = [{name = "brightSPARK Labs", email = "enquire@brightsparklabs.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "boto3==1.40.64",
    "click==8.1.8",
    "coloredlogs==15.0.1",
    "cronex==0.1.3.1",
    "dataclasses-json==0.5.7",
    "deepdiff==8.6.1",
    "GitPython==3.1.45",
    "jsonschema==4.25.1",
    "jinja2==3.1.6",
    "pycryptodome==3.23.0",
    "pydantic==2.11.9",
    "pyfiglet==1.0.4",
    "python-keycloak==3.12.0",
    "python-slugify==8.0.4",
    "ruamel-yaml==0.18.15",
    "tabulate==0.9.0",
]

[dependency-groups]
dev = [
    "bandit==1.8.6",
    "guarddog==2.6.0",
    "pdoc==15.0.4",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "pytest-cov==6.2.1",
    "ruff==0.13.2",
]
build = [
    "hatch==1.14.2",
    "wheel==0.45.1",
]
